deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sp4-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sp4-app
  template:
    metadata:
      labels:
        app: sp4-app
    spec:
      imagePullSecrets:
        - name: harbor-eks-cred 
      containers:
      - name: sp4-app
        image: imagerepo.vaw.ai/backstage/sp4-app:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
