ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: apps-vawai
    alb.ingress.kubernetes.io/healthcheck-path: /api/healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
  name: apps-vawai-ingress
  namespace: devsecops
spec:
  ingressClassName: alb
  rules:
  - host: apps.vaw.ai
    http:
      paths:
      - backend:
          service:
            name: sp4-app-test       
            port:
              number: 80              
        path: /sp4-app-test
        pathType: Prefix
